Generate a shared library
Signed-off-by: Fernando J. Pereda <ferdy@ferdyx.org>

--- a/copme/Makefile.am
+++ b/copme/Makefile.am
@@ -5,9 +5,10 @@ AM_CFLAGS = @LSYS_CFLAGS@ -std=c99
 
 SUBDIRS = . test
 
-lib_LIBRARIES = libcopme.a
+lib_LTLIBRARIES = libcopme.la
 
-libcopme_a_SOURCES = basic.c next.c copme.h
+libcopme_la_SOURCES = basic.c next.c copme.h
+libcopme_la_LDFLAGS = -version-info @VERSION_LIB_CURRENT@:@VERSION_LIB_REVISION@:0
 
 libcopme_includedir = $(includedir)/copme/
 libcopme_include_HEADERS = copme.h
