--- a/Makefile.am
+++ b/Makefile.am
@@ -3,4 +3,4 @@ EXTRA_DIST = autogen.bash
 MAINTAINERCLEANFILES = aclocal.m4 configure Makefile.in config/config.guess \
 					   config/ltmain.sh config/config.sub
 
-SUBDIRS = ctme copme pkg-config
+SUBDIRS = pkg-config copme ctme test
