pkg-config is not REQUIRED to build and use copme
Signed-off-by: Fernando J. Pereda <ferdy@ferdyx.org>

--- a/configure.ac
+++ b/configure.ac
@@ -102,7 +102,7 @@ AC_SUBST([LSYS_CFLAGS])
 dnl }}}
 
 dnl {{{ pkg-config
-PKG_PROG_PKG_CONFIG([0.9.0])
+dnl PKG_PROG_PKG_CONFIG([0.9.0])
 COPME_PC_CFLAGS=
 COPME_PC_LIBS="-lcopme"
 COPME_PC_VERSION="${VERSION_FULL}"
